fixed the visibility issue by changing font color

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1{
     margin: 0px 10px;
 }
 .grey{
-    color: hsl(215, 32%, 27%);
+    color: hsl(215, 51%, 70%);
     font-weight: 400;
     font-size: 18px;
 
